--- a/src/styles/Component/slider.scss
+++ b/src/styles/Component/slider.scss
@@ -14,6 +14,7 @@
 
 .text-in-content {
   margin-left: 175px;
+  margin-top: 515px;
   color: white;
   width: 50%;
 }
@@ -90,6 +91,11 @@
     filter: invert(100%);
   }
 }
+
+.font-48px {
+  font-size: 28px;
+  margin: 0px;
+}
 .font-28px {
   font-size: 28px;
   margin: 0px;
@@ -100,6 +106,10 @@
 }
 .font-bold {
   font-weight: bold;
+}
+h1 {
+  font-size: 65px;
+  margin: 0px;
 }
 
 .hidden-picture {
