--- a/src/styles/Component/slider.scss
+++ b/src/styles/Component/slider.scss
@@ -1,7 +1,6 @@
 .slider-container {
   position: relative;
   width: 100%;
-  height: 100%;
   background-color: white;
 }
 
@@ -9,18 +8,18 @@
   display: flex;
   position: absolute;
   width: 100%;
-  top: 100px;
+  top: 189px;
 }
 
 .text-in-content {
+  position: absolute;
+  bottom: 150px;
   margin-left: 175px;
-  margin-top: 515px;
   color: white;
-  width: 50%;
 }
 .form-in-content {
   margin-right: 175px;
-  width: 50%;
+  width: 100%;
 }
 .form {
   background-color: white;
@@ -90,22 +89,6 @@
     transition: 0.4s ease-in-out;
     filter: invert(100%);
   }
-}
-
-.font-48px {
-  font-size: 28px;
-  margin: 0px;
-}
-.font-28px {
-  font-size: 28px;
-  margin: 0px;
-}
-.font-18px {
-  font-size: 18px;
-  margin: 0px;
-}
-.font-bold {
-  font-weight: bold;
 }
 h1 {
   font-size: 65px;
