--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 body {
   padding: 0px;
   margin: 0px;
+  width: 100%;
   font-family: "Poppins";
 }
 
@@ -44,4 +45,134 @@ body {
   .navbar-list {
     margin-left: 0px;
   }
+}
+
+.advertisement {
+  margin-top: 140px;
+  margin-right: 175px;
+  margin-left: 175px;
+  background-color: #ffcc48;
+}
+
+.advertisement-up-line {
+  display: flex;
+  img {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+}
+.advertisement-up-line-image-container {
+  position: relative;
+  .text {
+    position: absolute;
+    top: 29px;
+    left: 29px;
+    background-color: white;
+    .square {
+      position: absolute;
+      top: 25px;
+      left: 25px;
+      background-color: #ffcc48;
+      height: 42px;
+      width: 42px;
+    }
+    p {
+      position: relative;
+      margin-left: 35px;
+      margin-right: 25px;
+    }
+    .name {
+      margin-top: 31px;
+    }
+    .price {
+      margin-top: 10px;
+      margin-bottom: 25px;
+    }
+    .line {
+      background-color: black;
+      margin-left: 35px;
+      margin-top: 26px;
+      height: 4px;
+      width: 49px;
+    }
+  }
+}
+.advertisement-down-line {
+  display: flex;
+  margin-top: 28px;
+  img {
+    width: 100%;
+    // height: 495px;
+  }
+}
+
+.advertisement-down-line-image-container {
+  position: relative;
+  .text {
+    position: absolute;
+    top: 138px;
+    left: 29px;
+    background-color: white;
+    .square {
+      position: absolute;
+      top: 25px;
+      left: 25px;
+      background-color: #ffcc48;
+      height: 42px;
+      width: 42px;
+    }
+    p {
+      position: relative;
+    }
+    .name {
+      margin-top: 31px;
+      margin-left: 35px;
+      margin-right: 24px;
+    }
+    .price {
+      margin-left: 35px;
+      margin-top: 10px;
+      margin-bottom: 25px;
+    }
+    .line {
+      background-color: black;
+      margin-left: 35px;
+      margin-top: 50px;
+      height: 4px;
+      width: 49px;
+    }
+    .line-next {
+      margin-top: 19px;
+    }
+  }
+
+  @media screen and (max-width: 1890px) {
+    .text {
+      top: 20px;
+    }
+  }
+}
+
+.arrow-in-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background-color: white;
+  border: 1px solid #707070;
+  z-index: 10;
+  height: 130px;
+  width: 130px;
+  bottom: 6px;
+  right: 0px;
+  img {
+    width: 24px;
+    height: 21px;
+  }
+}
+.arrow-in-image:hover {
+  transition: 0.4s ease-in-out;
+  filter: invert(100%);
 }
