--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,20 +51,19 @@ body {
   margin-top: 140px;
   margin-right: 175px;
   margin-left: 175px;
-  background-color: #ffcc48;
 }
 
 .advertisement-up-line {
   display: flex;
-  img {
-    width: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-  }
 }
 .advertisement-up-line-image-container {
   position: relative;
+  width: 50%;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   .text {
     position: absolute;
     top: 29px;
@@ -102,14 +101,16 @@ body {
 .advertisement-down-line {
   display: flex;
   margin-top: 28px;
-  img {
-    width: 100%;
-    // height: 495px;
-  }
 }
 
 .advertisement-down-line-image-container {
   position: relative;
+  width: 50%;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   .text {
     position: absolute;
     top: 138px;
@@ -148,7 +149,7 @@ body {
     }
   }
 
-  @media screen and (max-width: 1890px) {
+  @media screen and (max-width: 1800px) {
     .text {
       top: 20px;
     }
@@ -165,7 +166,7 @@ body {
   z-index: 10;
   height: 130px;
   width: 130px;
-  bottom: 6px;
+  bottom: 0px;
   right: 0px;
   img {
     width: 24px;
