--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -186,12 +186,20 @@ body {
   width: 130px;
   bottom: 0px;
   right: 0px;
+  background: linear-gradient(to right, black 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.2s ease-out;
   img {
     width: 24px;
     height: 21px;
   }
 }
 .arrow-in-image:hover {
-  transition: 0.4s ease-in-out;
-  filter: invert(100%);
+  transition: 0.2s ease-in-out;
+  background-position: left bottom;
+
+  img {
+    filter: invert(100%);
+  }
 }
