--- a/src/styles/Component/slider.scss
+++ b/src/styles/Component/slider.scss
@@ -69,25 +69,61 @@
   letter-spacing: 4px;
   text-align: center;
   padding-top: auto;
-  background-color: black;
+  background: linear-gradient(to right, #ffcc48 50%, black 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.2s ease-out;
   border: none;
-  transition: 0.4s ease-in-out;
 }
 .form-button:hover {
-  transition: 0.4s ease-in-out;
+  transition: 0.2s ease-in-out;
   border: none;
   color: black;
-  background-color: #ffcc48;
-  // filter: invert(100%);
+  background-position: left bottom;
 }
 
 .button-slider-container {
   position: absolute;
-  bottom: 0px;
-  left: 0;
+  display: flex;
+  bottom: 6px;
+  left: 0px;
+  img {
+    width: 38px;
+    height: 33px;
+  }
+  .left {
+    background: linear-gradient(to right, white 50%, black 50%);
+    background-size: 200% 100%;
+    background-position: left bottom;
+    transition: all 0.2s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 118px;
+    width: 160px;
+  }
+  .left:hover {
+    transition: 0.2s ease-in-out;
+    background-position: right bottom;
+  }
+  .right {
+    background: linear-gradient(to right, black 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all 0.2s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 145px;
+  }
+  .right:hover {
+    transition: 0.2s ease-in-out;
+    background-position: left bottom;
+  }
   :hover {
-    transition: 0.4s ease-in-out;
-    filter: invert(100%);
+    img {
+      filter: invert(100%);
+    }
   }
 }
 h1 {
