--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,11 +76,13 @@ body {
 }
 .advertisement-up-line-image-container {
   position: relative;
+  overflow: hidden;
   width: 50%;
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 71%;
   }
   .text {
     position: absolute;
@@ -120,14 +122,29 @@ body {
   display: flex;
   margin-top: 28px;
 }
+.advertisement-up-line-image-container:hover {
+  .picture {
+    transform: scale(1.5);
+    transition: 0.2s ease-out;
+  }
+  .arrow-in-image {
+    transition: 0.2s ease-in-out;
+    background-position: left bottom;
 
+    img {
+      filter: invert(100%);
+    }
+  }
+}
 .advertisement-down-line-image-container {
   position: relative;
+  overflow: hidden;
   width: 50%;
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 71%;
   }
   .text {
     position: absolute;
@@ -166,10 +183,23 @@ body {
       margin-top: 19px;
     }
   }
-
   @media screen and (max-width: 1800px) {
     .text {
       top: 20px;
+    }
+  }
+}
+.advertisement-down-line-image-container:hover {
+  .picture {
+    transform: scale(1.5);
+    transition: 0.2s ease-out;
+  }
+  .arrow-in-image {
+    transition: 0.2s ease-in-out;
+    background-position: left bottom;
+
+    img {
+      filter: invert(100%);
     }
   }
 }
@@ -193,13 +223,5 @@ body {
   img {
     width: 24px;
     height: 21px;
-  }
-}
-.arrow-in-image:hover {
-  transition: 0.2s ease-in-out;
-  background-position: left bottom;
-
-  img {
-    filter: invert(100%);
   }
 }
