--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -360,3 +360,116 @@ body {
     width: 33%;
   }
 }
+.galery {
+  display: flex;
+  margin-top: 142px;
+  overflow: hidden;
+  height: 95vh;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .left-site:hover {
+    .image {
+      transform: scale(1.5);
+      transition: 0.2s ease-out;
+    }
+    .arrow {
+      transition: 0.2s ease-out;
+      background-position: right bottom;
+      img {
+        filter: invert(100%);
+      }
+    }
+  }
+  .left-site {
+    width: 30%;
+    overflow: hidden;
+    .image {
+      height: 100%;
+      transition: 0.2s ease-out;
+    }
+    .arrow {
+      position: absolute;
+      z-index: 10;
+      height: 130px;
+      width: 130px;
+      left: 15px;
+      margin-top: (45vh);
+      background: linear-gradient(to right, white 50%, black 50%);
+      background-size: 200% 100%;
+      background-position: left bottom;
+      transition: 0.2s ease-out;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        height: 38px;
+        width: 43px;
+      }
+    }
+  }
+  .main-site {
+    margin-left: 30px;
+    width: 50%;
+    .up-image {
+      height: 60%;
+      margin-bottom: 20px;
+    }
+    .down-image {
+      height: 40%;
+      img {
+        object-position: 60% bottom;
+      }
+    }
+  }
+  .right-site {
+    width: 20%;
+    margin-left: 30px;
+    .arrow {
+      position: absolute;
+      z-index: 10;
+      height: 130px;
+      width: 130px;
+      right: 15px;
+      margin-top: (45vh);
+      background: linear-gradient(to right, black 50%, white 50%);
+      background-size: 200% 100%;
+      background-position: right bottom;
+      transition: 0.2s ease-out;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        height: 38px;
+        width: 43px;
+      }
+    }
+    .arrow:hover {
+      background-position: left bottom;
+      transition: 0.2s ease-out;
+      img {
+        filter: invert(100%);
+      }
+    }
+    .text {
+      height: 40%;
+      text-align: center;
+      .line {
+        z-index: 1;
+        background-color: black;
+        bottom: (4vw);
+        height: 8px;
+        margin-left: -(5vw);
+        width: 80%;
+      }
+    }
+    .image {
+      height: 60%;
+    }
+  }
+}
