--- a/src/styles/variables/font.scss
+++ b/src/styles/variables/font.scss
@@ -18,6 +18,10 @@
   font-size: 16px;
   margin: 0px;
 }
+.font-12px {
+  font-size: 12px;
+  margin: 0px;
+}
 .font-bold {
   font-weight: bold;
 }
